Kubernetes/1_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: quarkus-demo
spec:
  containers:
  - name: quarkus-demo
    image: quay.io/rhdevelopers/quarkus-demo:v1
    
#kubectl exec -it quarkus-demo /bin/sh
