Kubernetes/2_deployment.yaml
#First run the "webserver.Dockerfile"  and make the image available locally.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "devopsworkshop-deployment"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "devopsworkshop"
  template:
    metadata:
      labels:
        app: "devopsworkshop"
    spec:
      containers:
        - image: "my-webserver"
          name: webserver1
          ports:
            - containerPort: 80
