Kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "devopsworkshop-pod"
  labels:
    name: "devopsworkshop-pod"
spec:
  containers:
    - image: "nginx:alpine"
      name: nginx
