Kubernetes/3_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "devopsworkshop-service"
spec:
  ports:
    - port: 8080
      targetPort: 80
  selector:
    app: "devopsworkshop"
