Kubernetes/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: "devopsworkshop-service"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: "devopsworkshop"
